@@ -17,6 +17,7 @@ package io.telicent.jena.abac.bulk;
 
 import io.telicent.jena.abac.SysABAC;
 import io.telicent.jena.abac.labels.*;
+import io.telicent.jena.abac.labels.store.rocksdb.legacy.LegacyLabelsStoreRocksDB;
 import io.telicent.platform.play.PlayFiles;
 import org.apache.jena.atlas.logging.LogCtl;
 import org.apache.jena.graph.Triple;
@@ -31,8 +32,6 @@ import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -45,13 +44,13 @@ import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Stream;
 
-import static io.telicent.jena.abac.labels.LabelsStoreRocksDB.LabelMode.Overwrite;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Abstract base for tests which load large data sets into label stores
  */
+@SuppressWarnings({ "deprecation"})
 public abstract class BulkDirectory {
 
     protected static Logger LOG = LoggerFactory.getLogger(BulkDirectory.class);
@@ -78,14 +77,15 @@ public abstract class BulkDirectory {
 
     @AfterAll
     public static void afterClass() {
-        if (level != null)
+        if (level != null) {
             LogCtl.setLevel(BulkDirectory.LOG, "level");
+        }
     }
 
-    abstract LabelsStore createLabelsStore(LabelsStoreRocksDB.LabelMode labelMode, StoreFmt storeFmt) throws RocksDBException;
+    abstract LabelsStore createLabelsStore(StoreFmt storeFmt) throws RocksDBException;
 
-    static Stream<Arguments> provideLabelAndStorageFmt() {
-        return Stream.of(Arguments.of(null, null));
+    static Stream<Arguments> provideStorageFormat() {
+        return Stream.of(Arguments.of(null));
     }
 
     @Disabled("useful for dumping comprehensive java state")
@@ -113,7 +113,8 @@ public abstract class BulkDirectory {
     protected File directoryProperty(final String property) {
 
         var externalDir = System.getProperty(property);
-        assertThat(externalDir).as("Please define property -D%s=<path-to-directory> in your run configuration", property).isNotEmpty();
+        assertThat(externalDir).as("Please define property -D%s=<path-to-directory> in your run configuration",
+                                   property).isNotEmpty();
         File files = new File(externalDir);
         assertThat(files.isDirectory()).isTrue();
 
@@ -122,15 +123,15 @@ public abstract class BulkDirectory {
 
     @Disabled("too big/slow - used for manually checking load capacity")
     @ParameterizedTest(name = "{index}: Store = {0}")
-    @MethodSource("provideStorageFmt")
+    @MethodSource("provideStorageFormat")
     public void biggerFiles(StoreFmt storeFmt) throws Exception {
 
-        try(LabelsStore labelsStore = createLabelsStore(Overwrite, storeFmt)) {
+        try (LabelsStore labelsStore = createLabelsStore(storeFmt)) {
 
             File files = directoryProperty("abac.labelstore.biggerfiles");
             PlayFiles.action(files.getAbsolutePath(),
-                    message -> LabelsLoadingConsumer.consume(labelsStore, message),
-                    headers -> headers.put(SysABAC.hSecurityLabel, DEFAULT_SECURITY_LABEL));
+                             message -> LabelsLoadingConsumer.consume(labelsStore, message),
+                             headers -> headers.put(SysABAC.hSecurityLabel, DEFAULT_SECURITY_LABEL));
 
             final var properties = labelsStore.getProperties();
             LOG.info("properties {}", properties);
@@ -139,15 +140,15 @@ public abstract class BulkDirectory {
 
     @Disabled("too big/slow - used for manually checking load capacity")
     @ParameterizedTest(name = "{index}: Store = {0}")
-    @MethodSource("provideStorageFmt")
+    @MethodSource("provideStorageFormat")
     public void biggestFiles(StoreFmt storeFmt) throws Exception {
 
-        try(LabelsStore labelsStore = createLabelsStore(Overwrite, storeFmt)) {
+        try (LabelsStore labelsStore = createLabelsStore(storeFmt)) {
 
             File files = directoryProperty("abac.labelstore.biggestfiles");
             PlayFiles.action(files.getAbsolutePath(),
-                    message -> LabelsLoadingConsumer.consume(labelsStore, message),
-                    headers -> headers.put(SysABAC.hSecurityLabel, DEFAULT_SECURITY_LABEL));
+                             message -> LabelsLoadingConsumer.consume(labelsStore, message),
+                             headers -> headers.put(SysABAC.hSecurityLabel, DEFAULT_SECURITY_LABEL));
 
             final var properties = labelsStore.getProperties();
             LOG.info("properties {}", properties);
@@ -158,36 +159,30 @@ public abstract class BulkDirectory {
         playFiles(directory, labelsStore, null);
     }
 
-    private void playFiles(final String directory, final LabelsStore labelsStore, final LabelsLoadingConsumer.LabelHandler labelHandler) {
+    private void playFiles(final String directory, final LabelsStore labelsStore,
+                           final LabelsLoadingConsumer.LabelHandler labelHandler) {
         File files = new File(directory);
         assertThat(files.isDirectory()).isTrue();
         PlayFiles.action(files.getAbsolutePath(),
-                message -> LabelsLoadingConsumer.consume(labelsStore, message, labelHandler),
-                headers -> headers.put(SysABAC.hSecurityLabel, DEFAULT_SECURITY_LABEL));
+                         message -> LabelsLoadingConsumer.consume(labelsStore, message, labelHandler),
+                         headers -> headers.put(SysABAC.hSecurityLabel, DEFAULT_SECURITY_LABEL));
     }
 
-    @ParameterizedTest(name = "{index}: Store = {1}, LabelMode = {0}")
-    @MethodSource("provideLabelAndStorageFmt")
-    public void starWars(LabelsStoreRocksDB.LabelMode labelMode, StoreFmt storeFmt) throws Exception {
+    @ParameterizedTest(name = "{index}: Store = {0}")
+    @MethodSource("provideStorageFormat")
+    public void starWars(StoreFmt storeFmt) throws Exception {
 
-        try(LabelsStore labelsStore = createLabelsStore(labelMode, storeFmt)) {
+        try (LabelsStore labelsStore = createLabelsStore(storeFmt)) {
 
             playFiles(CONTENT_DIR, labelsStore);
             playFiles(AFTER_DIR, labelsStore);
 
-            var labels = LabelsLoadingConsumer.labelsForTriple(labelsStore,
-                    "<https://starwars.com#grid_R7> <http://ies.data.gov.uk/ontology/ies4#inLocation> <https://starwars.com#AGalaxyFarFarAway> .");
+            var label = LabelsLoadingConsumer.labelsForTriple(labelsStore,
+                                                               "<https://starwars.com#grid_R7> <http://ies.data.gov.uk/ontology/ies4#inLocation> <https://starwars.com#AGalaxyFarFarAway> .");
 
-            if (labelsStore instanceof LabelsStoreRocksDB && labelMode == LabelsStoreRocksDB.LabelMode.Merge) {
-                //Check that a member of the AFTER_DIR has BOTH labels
-                assertThat(labels.size()).isEqualTo(2);
-                assertThat(labels).contains(Label.fromText("sensitivity=Ultra"));
-                assertThat(labels).contains(Label.fromText("nationality=GBR"));
-            } else {
-                //Check that a member of the AFTER_DIR has ONLY the latest label (overwrite mode)
-                assertThat(labels.size()).isEqualTo(1);
-                assertThat(labels).contains(Label.fromText("sensitivity=Ultra"));
-            }
+            //Check that a member of the AFTER_DIR has ONLY the latest label (overwrite mode)
+            assertNotNull(label);
+            assertEquals(Label.fromText("sensitivity=Ultra"), label);
 
             final var properties = labelsStore.getProperties();
 //        LOG.info("properties {}", properties);
@@ -198,41 +193,40 @@ public abstract class BulkDirectory {
         }
     }
 
-    @ParameterizedTest(name = "{index}: Store = {1}, LabelMode = {0}")
-    @MethodSource("provideLabelAndStorageFmt")
-    public void backupAndRestore(LabelsStoreRocksDB.LabelMode labelMode, StoreFmt storeFmt) throws Exception {
+    @ParameterizedTest(name = "{index}: Store = {0}")
+    @MethodSource("provideStorageFormat")
+    public void backupAndRestore(StoreFmt storeFmt) throws Exception {
         // set up
-        try(LabelsStore labelsStore = createLabelsStore(labelMode, storeFmt)) {
-            String tripleString = "<https://starwars.com#grid_R7> <http://ies.data.gov.uk/ontology/ies4#inLocation> <https://starwars.com#AGalaxyFarFarAway> .";
+        try (LabelsStore labelsStore = createLabelsStore(storeFmt)) {
+            String tripleString =
+                    "<https://starwars.com#grid_R7> <http://ies.data.gov.uk/ontology/ies4#inLocation> <https://starwars.com#AGalaxyFarFarAway> .";
             Label labelBefore = Label.fromText("security=unknowndefault");
 
-            if (labelsStore instanceof LabelsStoreRocksDB rocksDB) {
+            if (labelsStore instanceof LegacyLabelsStoreRocksDB rocksDB) {
                 Path tempDir = Files.createTempDirectory("backup");
                 LabelsLoadingConsumer.addLabelsForTriple(labelsStore, tripleString, labelBefore);
-                var labels = LabelsLoadingConsumer.labelsForTriple(labelsStore, tripleString);
+                var label = LabelsLoadingConsumer.labelsForTriple(labelsStore, tripleString);
 
-                assertEquals(1, labels.size());
-                assertEquals(labelBefore, labels.get(0));
+                assertNotNull(label);
+                assertEquals(labelBefore, label);
 
                 // Back-up
                 rocksDB.backup(tempDir.toString());
 
                 // Make some changes
-                LabelsLoadingConsumer.addLabelsForTriple(labelsStore, tripleString, Label.fromText("security=somethingelse"));
-                labels = LabelsLoadingConsumer.labelsForTriple(labelsStore, tripleString);
+                LabelsLoadingConsumer.addLabelsForTriple(labelsStore, tripleString,
+                                                         Label.fromText("security=somethingelse"));
+                label = LabelsLoadingConsumer.labelsForTriple(labelsStore, tripleString);
 
-                if (Overwrite.equals(labelMode)) {
-                    assertEquals(1, labels.size());
-                    assertNotEquals(labelBefore, labels.get(0));
-                } else {
-                    assertNotEquals(1, labels.size());
-                }
+
+                assertNotNull(label);
+                assertNotEquals(labelBefore, label);
 
                 // Restore
                 rocksDB.restore(tempDir.toString());
 
-                labels = LabelsLoadingConsumer.labelsForTriple(labelsStore, tripleString);
-                assertEquals(1, labels.size());
+                label = LabelsLoadingConsumer.labelsForTriple(labelsStore, tripleString);
+                assertNotNull(label);
                 //assertEquals(labelBefore, labels.get(0));
 
                 rocksDB.close();
@@ -241,22 +235,23 @@ public abstract class BulkDirectory {
         }
     }
 
-    @ParameterizedTest(name = "{index}: Store = {1}, LabelMode = {0}")
-    @MethodSource("provideLabelAndStorageFmt")
-    public void backupAndRestoreFailuresThrowLabelsException(LabelsStoreRocksDB.LabelMode labelMode, StoreFmt storeFmt) throws Exception {
-        try(LabelsStore labelsStore = createLabelsStore(Overwrite, storeFmt)) {
+    @ParameterizedTest(name = "{index}: Store = {0},")
+    @MethodSource("provideStorageFormat")
+    public void backupAndRestoreFailuresThrowLabelsException(
+            StoreFmt storeFmt) throws Exception {
+        try (LabelsStore labelsStore = createLabelsStore(storeFmt)) {
 
-            if (labelsStore instanceof LabelsStoreRocksDB rocksDB) {
+            if (labelsStore instanceof LegacyLabelsStoreRocksDB rocksDB) {
                 Path tempDir = Files.createTempDirectory("backup");
 
                 String missingDir = tempDir.toString() + "/notthere";
 
                 assertThrows(LabelsException.class,
-                        () -> rocksDB.backup(missingDir)
+                             () -> rocksDB.backup(missingDir)
                 );
 
                 assertThrows(LabelsException.class,
-                        () -> rocksDB.restore(missingDir)
+                             () -> rocksDB.restore(missingDir)
                 );
             }
         }
@@ -284,11 +279,11 @@ public abstract class BulkDirectory {
 
         final LoadStats loadStats = new LoadStats();
 
-        Map<Triple, List<Label>> known = new HashMap<>();
+        Map<Triple, Label> known = new HashMap<>();
         var generator = new Random(42L);
 
         loadStats.beginSetup = System.currentTimeMillis();
-        try(LabelsStore labelsStore = createLabelsStore(Overwrite, storeFmt)){
+        try (LabelsStore labelsStore = createLabelsStore(storeFmt)) {
 
             loadStats.beginLoad = System.currentTimeMillis();
             AtomicInteger count = new AtomicInteger();
@@ -301,12 +296,12 @@ public abstract class BulkDirectory {
                     //change the label, and record the changed label
                     overrideCount.getAndIncrement();
                     var newLabel = Label.fromText(String.format("%s_%d", label.getText(), overrideCount.get()));
-                    known.put(triple, List.of(newLabel));
+                    known.put(triple, newLabel);
                     labelsStore.add(s, p, o, newLabel);
                     LOG.debug("Add {}", newLabel);
                 } else if (random < readFraction + readFraction) {
                     //don't change the label, record the original value to check for
-                    known.put(triple, List.of(label));
+                    known.put(triple, label);
                 } else {
                     if (known.containsKey(triple)) {
                         //handle a repeat by re-overwriting with the value we hold
@@ -342,12 +337,12 @@ public abstract class BulkDirectory {
     private void executeKnownList(
             ExecutorService executorService,
             LabelsStore labelsStore,
-            final ArrayList<Map.Entry<Triple, List<Label>>> knownList) {
+            final ArrayList<Map.Entry<Triple, Label>> knownList) {
         var futures = new ArrayList<Future<Boolean>>(knownList.size());
         for (var kv : knownList) {
             LOG.debug("Try {} -> {}", kv.getKey(), kv.getValue());
             var future = executorService.submit(() -> {
-                var labels = labelsStore.labelsForTriples(kv.getKey());
+                var labels = labelsStore.labelForTriple(kv.getKey());
                 assertThat(labels).isEqualTo(kv.getValue());
                 return true;
             });
@@ -355,7 +350,7 @@ public abstract class BulkDirectory {
         }
         while (!futures.isEmpty()) {
             try {
-                assertThat(futures.remove(0).get()).isEqualTo(true);
+                assertThat(futures.removeFirst().get()).isEqualTo(true);
             } catch (ExecutionException | InterruptedException e) {
                 throw new RuntimeException("Test problem", e);
             }
